--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -41,7 +41,7 @@
         {% if post.collection == 'teaching' %}
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'publications' %}
-          <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+          <p>Date: <i>{{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'readings' %}
           <p>By <i>{{ post.author }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.date %}
